@@ -21,13 +21,14 @@ class geodesy_tests(unittest.TestCase):
 		
 		ACCURACY = 6
 		
-		line = '92 1 1 48622.00 I  0.182969 0.000672  0.168817 0.000345  I-0.1251669 0.0000207  1.8335 0.0201  I   -10.437     .507     -.917     .165   .182400   .167900  -.1253000    -9.900    -1.700\n'
+		## http://toshi.nofs.navy.mil/ser7/finals2000A.all
+		line = '92 1 1 48622.00 I  0.182985 0.000672  0.168782 0.000345  I-0.1251614 0.0000207  1.8335 0.0201  I    -0.086    0.202     0.130    0.165   .182400   .167900  -.1253000     0.129    -0.653\n'
 		newEOP = geodesy.EOP()
 		newEOP.fromMAIA(line)
 		
-		self.assertAlmostEqual(newEOP.x, 0.182969, ACCURACY)
-		self.assertAlmostEqual(newEOP.y, 0.168817, ACCURACY)
-		self.assertAlmostEqual(newEOP.utDiff, -0.1251669, ACCURACY)
+		self.assertAlmostEqual(newEOP.x, 0.182985, ACCURACY)
+		self.assertAlmostEqual(newEOP.y, 0.168782, ACCURACY)
+		self.assertAlmostEqual(newEOP.utDiff, -0.1251614, ACCURACY)
 		self.assertEqual(newEOP.type, 'final')
 		
 	def test_read_mjd(self):
@@ -39,18 +40,22 @@ class geodesy_tests(unittest.TestCase):
 		eop = geodesy.getEOP(41684.0)
 		
 		# Check
-		self.assertAlmostEqual(eop.x, 0.120679, ACCURACY)
-		self.assertAlmostEqual(eop.y, 0.137008, ACCURACY)
-		self.assertAlmostEqual(eop.utDiff,  0.8084136, ACCURACY)
+		## http://toshi.nofs.navy.mil/ser7/finals2000A.all
+		## 73 1 2 41684.00 I  0.120727 0.009786  0.136963 0.015902  I 0.8084318 0.0002710  0.0000 0.1916  P    -0.766    0.199    -0.720    0.300   .143000   .137000   .8075000   -18.637    -3.667 
+		self.assertAlmostEqual(eop.x, 0.120727, ACCURACY)
+		self.assertAlmostEqual(eop.y, 0.136963, ACCURACY)
+		self.assertAlmostEqual(eop.utDiff,  0.8084318, ACCURACY)
 		
 		# Read in the data for January 2, 1993
 		eops = geodesy.getEOP(48989.0)
 		eop = eops
 		
 		# Check
-		self.assertAlmostEqual(eop.x, 0.208317, ACCURACY)
-		self.assertAlmostEqual(eop.y, 0.356582, ACCURACY)
-		self.assertAlmostEqual(eop.utDiff,  0.0594726, ACCURACY)
+		## http://toshi.nofs.navy.mil/ser7/finals2000A.all
+		## 93 1 2 48989.00 I  0.208331 0.000166  0.356585 0.000241  I 0.0594794 0.0000108  2.6575 0.0094  I     0.187    0.233     0.020    0.180   .208700   .355900   .0593100    -0.020    -0.087
+		self.assertAlmostEqual(eop.x, 0.208331, ACCURACY)
+		self.assertAlmostEqual(eop.y, 0.356585, ACCURACY)
+		self.assertAlmostEqual(eop.utDiff,  0.0594794, ACCURACY)
 		
 		# Read in three values and check the output
 		mjdList = [41684.0, 41685.0, 41686.0]
