@@ -10,6 +10,9 @@
   * Fixed a conjugation problem in the lsl.writer.fitsidi module that caused the image to be transposed in AIPS
   * Fixed a conjugation problem in the lsl.utils.imaging module that caused images created from FITS-IDI files to be transposed
   * Fixed a source enumeration problem in the lsl.writer.fitsidi module that caused excessive source IDs
+  * Fixed a bug in lsl.reader.vdif that caused gofast.c not to compile with newer versions of gcc
+  * Fixed several problems when using LSL with Numpy >=1.12
+  * Updated test_geodesy.py to work with the revised EOP parameter files
 
 1.1.3.2
   * Applied a fix for the course FIFO phase jumps in the core.c FEngineC2/3 functions.
